# FusionCore

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
fusionApp/: build.gradle.kts
fusionApp/src/main/: AndroidManifest.xml
fusionApp/src/main/java/dev/allofus/fusioncore/: BootstrapActivity.java  ClassLoaderHooks.java  LibUnityDownloader.java  SelectorActivity.java  UnityPlayerHooks.java  Utilities.java
fusionApp/src/main/jni/main/: main.cpp
fusionApp/src/main/res/drawable/: bg_selector_card.xml
fusionApp/src/main/res/layout/: activity_bootstrap.xml  activity_selector.xml  item_selector_target.xml
fusionApp/src/main/res/values/: strings.xml
launcher/: build.gradle.kts
launcher/src/main/res/values/: strings.xml
unityLibrary/: build.gradle.kts  proguard-unity.txt
unityLibrary/src/main/: AndroidManifest.xml
unityLibrary/src/main/java/com/unity3d/player/: UnityPlayerActivity.java
unityLibrary/src/main/java/dev/allofus/fusioncore/: ClassLoaderHooks.java  FusionConfig.java  LibUnityDownloader.java  NativeLibraryManager.java
unityLibrary/src/main/jni/: CMakeLists.txt
unityLibrary/src/main/jni/fusion/: CMakeLists.txt
unityLibrary/src/main/jni/fusion/include/: fusion_config.h  libmain.h
unityLibrary/src/main/jni/fusion/include/hooking/: il2cpp.h  safehook.h
unityLibrary/src/main/jni/fusion/src/: dotnet.cpp  exports.cpp  fusion.cpp  fusion_config.cpp
unityLibrary/src/main/jni/fusion/src/hooking/: il2cpp.cpp  (+1 more)
unityLibrary/src/main/jni/main/: CMakeLists.txt  main.cpp
unityLibrary/src/main/res/values/: strings.xml
(+2 files in other folders)
